--- a/.github/workflows/app-a.yaml
+++ b/.github/workflows/app-a.yaml
@@ -31,12 +31,12 @@ jobs:
           filters: |
             src:
               - .github/workflows/app-a.yaml
-              - MonoRepo.AppA/**        
+              - MonoRepo.AppA/**
       
   BuildTestPublish:
     runs-on: ubuntu-latest
     needs: [FilesChanged]
-    if: needs.files-changed.outputs.filesChanged == 'true'
+    if: needs.FilesChanged.outputs.filesChanged == 'true'
     steps:
       - uses: actions/checkout@v3
 
