Add a common project

--- a/.github/workflows/app-a.yaml
+++ b/.github/workflows/app-a.yaml
@@ -32,6 +32,7 @@ jobs:
             src:
               - .github/workflows/app-a.yaml
               - MonoRepo.AppA/**
+              - MonoRepo.Common/**
       
   BuildTestPublish:
     runs-on: ubuntu-latest
