--- a/.github/workflows/app-a.yaml
+++ b/.github/workflows/app-a.yaml
@@ -55,7 +55,7 @@ jobs:
         
   Test:
     runs-on: ubuntu-latest
-    needs: [ FilesChanged ]
+    needs: [ FilesChanged, Build ]
     if: needs.FilesChanged.outputs.filesChanged == 'true'
     steps:
       - uses: actions/checkout@v3
