--- a/.github/workflows/app-b.yaml
+++ b/.github/workflows/app-b.yaml
@@ -51,3 +51,10 @@ jobs:
 
       - name: Build
         run: dotnet build AppB/MonoRepo.AppB/MonoRepo.AppB.csproj --no-restore --configuration ${{ env.BUILD_CONFIGURATION }}
+        
+  StatusCheck:
+    runs-on: ubuntu-latest
+    needs: [Build]
+    if: success()
+    steps:
+      - run: echo "App B Status Check succeeded"
