--- a/.github/workflows/app-a.yaml
+++ b/.github/workflows/app-a.yaml
@@ -74,37 +74,9 @@ jobs:
       - name: Tests
         run: dotnet test --no-build --configuration ${{ env.BUILD_CONFIGURATION }} AppA/MonoRepo.AppA.Tests/MonoRepo.AppA.Tests.csproj
         
-  AfterBuildTest:
-    needs: [Test]
-    runs-on: ubuntu-latest
-    if: success()
-    outputs:
-      success: ${{ steps.setoutput.outputs.success }}
-    steps:
-      - id: setoutput
-        run: echo "::set-output name=success::true"
-  
-  DummyStep:
-    runs-on: ubuntu-latest
-    needs: [FilesChanged]
-    if: needs.FilesChanged.outputs.filesChanged == 'false'
-    outputs:
-      success: ${{ steps.setoutput.outputs.success }}
-    steps:
-      - id: setoutput
-        run: echo "::set-output name=success::true"
-        
   StatusCheck:
     runs-on: ubuntu-latest
-    if: always()
-    needs: [Test, AfterBuildTest, DummyStep]
+    needs: [Test]
+    if: success()
     steps:
-      - run: |
-          passed="${{ needs.AfterBuildTest.outputs.success || needs.DummyStep.outputs.success }}"
-          if [[ $passed == "true" ]]; then
-            echo "App A passed"
-            exit 0
-          else
-            echo "App A failed"
-            exit 1
-          fi
+      - run: echo "App B Status Check succeeded"
