--- a/.github/workflows/app-a.yaml
+++ b/.github/workflows/app-a.yaml
@@ -52,6 +52,7 @@ jobs:
       - name: Build
         run: dotnet build AppA/MonoRepo.AppA/MonoRepo.AppA.csproj --no-restore --configuration ${{ env.BUILD_CONFIGURATION }}
       
+        
   Test:
     runs-on: ubuntu-latest
     needs: [ FilesChanged, Build ]
@@ -73,9 +74,37 @@ jobs:
       - name: Tests
         run: dotnet test --no-build --configuration ${{ env.BUILD_CONFIGURATION }} AppA/MonoRepo.AppA.Tests/MonoRepo.AppA.Tests.csproj
         
+  AfterBuildTest:
+    needs: [Build,Test]
+    runs-on: ubuntu-latest
+    if: success()
+    outputs:
+      success: ${{ steps.setoutput.outputs.success }}
+    steps:
+      - id: setoutput
+        run: echo "::set-output name=success::true"
+  
+  DummyStep:
+    runs-on: ubuntu-latest
+    needs: [FilesChanged]
+    if: needs.FilesChanged.outputs.filesChanged == 'false'
+    outputs:
+      success: ${{ steps.setoutput.outputs.success }}
+    steps:
+      - id: setoutput
+        run: echo "::set-output name=success::true"
+        
   AppAStatusCheck:
     runs-on: ubuntu-latest
-    needs: [ Build, Test ]
-    if: success()
+    if: always()
+    needs: [Test, AfterBuildTest, DummyStep]
     steps:
-      - run: echo "App A Status Check succeeded"
+      - run: |
+          passed="${{ needs.AfterBuildTest.outputs.success || needs.DummyStep.outputs.success }}"
+          if [[ $passed == "true" ]]; then
+            echo "App A passed"
+            exit 0
+          else
+            echo "App A failed"
+            exit 1
+          fi
