--- a/.github/workflows/master-pr.yaml
+++ b/.github/workflows/master-pr.yaml
@@ -32,3 +32,33 @@ jobs:
 
       - name: Build
         run: dotnet build --no-restore --configuration ${{ env.BUILD_CONFIGURATION }} MonoRepo.sln
+        
+  Changes:
+    runs-on: ubuntu-latest
+    outputs:
+      app-a: ${{ steps.filter.outputs.app-a }}
+      app-b: ${{ steps.filter.outputs.app-b }}
+    steps:
+      - uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          filters: |
+            app-a:
+              - .github/workflows/app-a.yaml
+              - AppA/**
+              - MonoRepo.Common/**
+            app-b:
+              - .github/workflows/app-b.yaml
+              - AppB/**
+              - MonoRepo.Common/**
+  
+  AppA:
+    uses: ./.github/workflows/app-a.yaml
+    secrets: inherit
+    needs: [ Changes ]
+    if: needs.Changes.outputs.app-a == 'true'
+  AppB:
+    uses: ./.github/workflows/app-b.yaml
+    secrets: inherit
+    needs: [ Changes ]
+    if: needs.Changes.outputs.app-b == 'true'
