Try explicit skipped check

--- a/.github/workflows/app-b.yaml
+++ b/.github/workflows/app-b.yaml
@@ -12,13 +12,14 @@ permissions:
   statuses: write # required for dorny/test-reporter
   checks: write # required for dorny/test-reporter
 
-#concurrency:
-#  group: ${{ github.workflow }}-${{ github.ref }}
-#  cancel-in-progress: true
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   Build:
     runs-on: ubuntu-latest
+    needs: [FilesChanged]
     steps:
       - uses: actions/checkout@v3
 
@@ -32,10 +33,3 @@ jobs:
 
       - name: Build
         run: dotnet build AppB/MonoRepo.AppB/MonoRepo.AppB.csproj --no-restore --configuration ${{ env.BUILD_CONFIGURATION }}
-  
-  AppBStatusCheck:
-    runs-on: ubuntu-latest
-    if: always()
-    needs: [Build]
-    steps:
-      - run: echo "App B passed"
