--- a/.github/workflows/app-a.yaml
+++ b/.github/workflows/app-a.yaml
@@ -1,8 +1,8 @@
-name: App A
+name: Master PR
 on:
+  pull_request:
   workflow_dispatch:
-  workflow_call:
-    
+
 env:
   BUILD_CONFIGURATION: 'Release'
 
@@ -12,12 +12,12 @@ permissions:
   statuses: write # required for dorny/test-reporter
   checks: write # required for dorny/test-reporter
 
-#concurrency:
-#  group: ${{ github.workflow }}-${{ github.ref }}
-#  cancel-in-progress: true
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  Build:
+  BuildSolution:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -28,35 +28,7 @@ jobs:
           dotnet-version: ${{ vars.DOTNET_VERSION }}
 
       - name: Restore Projects
-        run: dotnet restore AppA/MonoRepo.AppA/MonoRepo.AppA.csproj
+        run: dotnet restore
 
       - name: Build
-        run: dotnet build AppA/MonoRepo.AppA/MonoRepo.AppA.csproj --no-restore --configuration ${{ env.BUILD_CONFIGURATION }}
-      
-        
-  Test:
-    runs-on: ubuntu-latest
-    needs: [ Build ]
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Install .NET Core 7 SDK
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: ${{ vars.DOTNET_VERSION }}
-
-      - name: Restore Projects
-        run: dotnet restore AppA/MonoRepo.AppA.Tests/MonoRepo.AppA.Tests.csproj
-
-      - name: Build
-        run: dotnet build AppA/MonoRepo.AppA.Tests/MonoRepo.AppA.Tests.csproj --no-restore --configuration ${{ env.BUILD_CONFIGURATION }}
-
-      - name: Tests
-        run: dotnet test --no-build --configuration ${{ env.BUILD_CONFIGURATION }} AppA/MonoRepo.AppA.Tests/MonoRepo.AppA.Tests.csproj
-        
-  AppAStatusCheck:
-    runs-on: ubuntu-latest
-    if: always()
-    needs: [Build, Test]
-    steps:
-      - run: echo "App A passed"
+        run: dotnet build --no-restore --configuration ${{ env.BUILD_CONFIGURATION }} MonoRepo.sln
