--- a/.github/workflows/app-b.yaml
+++ b/.github/workflows/app-b.yaml
@@ -1,8 +1,8 @@
 name: App B
 on:
+  push:
   workflow_dispatch:
-  workflow_call:
-    
+
 env:
   BUILD_CONFIGURATION: 'Release'
 
@@ -12,13 +12,32 @@ permissions:
   statuses: write # required for dorny/test-reporter
   checks: write # required for dorny/test-reporter
 
-#concurrency:
-#  group: ${{ github.workflow }}-${{ github.ref }}
-#  cancel-in-progress: true
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
+  FilesChanged:
+    runs-on: ubuntu-latest
+    name: detect what files changed
+    outputs:
+      filesChanged: ${{ steps.changes.outputs.src }}
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            src:
+              - .github/workflows/app-b.yaml
+              - AppB/**
+              - MonoRepo.Common/**
+  
   Build:
     runs-on: ubuntu-latest
+    needs: [FilesChanged]
+    if: needs.FilesChanged.outputs.filesChanged == 'true'
     steps:
       - uses: actions/checkout@v3
 
@@ -33,9 +52,37 @@ jobs:
       - name: Build
         run: dotnet build AppB/MonoRepo.AppB/MonoRepo.AppB.csproj --no-restore --configuration ${{ env.BUILD_CONFIGURATION }}
   
+  AfterBuild:
+    needs: [Build]
+    runs-on: ubuntu-latest
+    if: success()
+    outputs:
+      success: ${{ steps.setoutput.outputs.SUCCESS }}
+    steps:
+      - id: setoutput
+        run: echo "SUCCESS=true" >> $env:GITHUB_OUTPUT
+  
+  DummyStep:
+    runs-on: ubuntu-latest
+    needs: [FilesChanged]
+    if: needs.FilesChanged.outputs.filesChanged == 'false'
+    outputs:
+      success: ${{ steps.setoutput.outputs.SUCCESS }}
+    steps:
+      - id: setoutput
+        run: echo "SUCCESS=true" >> $env:GITHUB_OUTPUT
+  
   AppBStatusCheck:
     runs-on: ubuntu-latest
     if: always()
-    needs: [Build]
+    needs: [AfterBuild, DummyStep]
     steps:
-      - run: echo "App B passed"
+      - run: |
+          passed="${{ needs.AfterBuild.outputs.success || needs.DummyStep.outputs.success }}"
+          if [[ $passed == "true" ]]; then
+            echo "App B passed"
+            exit 0
+          else
+            echo "App B failed"
+            exit 1
+          fi
