--- a/.github/workflows/app-b.yaml
+++ b/.github/workflows/app-b.yaml
@@ -1,8 +1,8 @@
 name: App B
 on:
+  push:
   workflow_dispatch:
-  workflow_call:
-    
+
 env:
   BUILD_CONFIGURATION: 'Release'
 
@@ -17,8 +17,27 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  FilesChanged:
+    runs-on: ubuntu-latest
+    name: detect what files changed
+    outputs:
+      filesChanged: ${{ steps.changes.outputs.src }}
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            src:
+              - .github/workflows/app-b.yaml
+              - AppB/**
+              - MonoRepo.Common/**
+  
   Build:
     runs-on: ubuntu-latest
+    needs: [FilesChanged]
+    if: needs.FilesChanged.outputs.filesChanged == 'true'
     steps:
       - uses: actions/checkout@v3
 
@@ -32,3 +51,38 @@ jobs:
 
       - name: Build
         run: dotnet build AppB/MonoRepo.AppB/MonoRepo.AppB.csproj --no-restore --configuration ${{ env.BUILD_CONFIGURATION }}
+  
+  AfterBuild:
+    needs: [Build]
+    runs-on: ubuntu-latest
+    if: success()
+    outputs:
+      success: ${{ steps.setoutput.outputs.SUCCESS }}
+    steps:
+      - id: setoutput
+        run: echo "SUCCESS=true" >> $env:GITHUB_OUTPUT
+  
+  DummyStep:
+    runs-on: ubuntu-latest
+    needs: [FilesChanged]
+    if: needs.FilesChanged.outputs.filesChanged == 'false'
+    outputs:
+      success: ${{ steps.setoutput.outputs.success }}
+    steps:
+      - id: setoutput
+        run: echo "success=true" >> $GITHUB_OUTPUT
+  
+  AppBStatusCheck:
+    runs-on: ubuntu-latest
+    if: always()
+    needs: [AfterBuild, DummyStep]
+    steps:
+      - run: |
+          passed="${{ needs.AfterBuild.outputs.success || needs.DummyStep.outputs.success }}"
+          if [[ $passed == "true" ]]; then
+            echo "App B passed"
+            exit 0
+          else
+            echo "App B failed"
+            exit 1
+          fi
