--- a/.github/workflows/app-a.yaml
+++ b/.github/workflows/app-a.yaml
@@ -82,7 +82,7 @@ jobs:
       success: ${{ steps.setoutput.outputs.SUCCESS }}
     steps:
       - id: setoutput
-        run: echo "SUCCESS=true" >> $env:GITHUB_OUTPUT
+        run: echo "success=true" >> "$GITHUB_OUTPUT"
   
   DummyStep:
     runs-on: ubuntu-latest
@@ -92,7 +92,7 @@ jobs:
       success: ${{ steps.setoutput.outputs.success }}
     steps:
       - id: setoutput
-        run: echo "success=true" >> $GITHUB_OUTPUT
+        run: echo "success=true" >> "$GITHUB_OUTPUT"
   
   AppAStatusCheck:
     runs-on: ubuntu-latest
