--- a/.github/workflows/app-b.yaml
+++ b/.github/workflows/app-b.yaml
@@ -60,7 +60,7 @@ jobs:
       success: ${{ steps.setoutput.outputs.SUCCESS }}
     steps:
       - id: setoutput
-        run: echo "SUCCESS=true" >> $env:GITHUB_OUTPUT
+        run: echo "success=true" >> "$GITHUB_OUTPUT"
   
   DummyStep:
     runs-on: ubuntu-latest
@@ -70,7 +70,7 @@ jobs:
       success: ${{ steps.setoutput.outputs.success }}
     steps:
       - id: setoutput
-        run: echo "success=true" >> $GITHUB_OUTPUT
+        run: echo "success=true" >> "$GITHUB_OUTPUT"
   
   AppBStatusCheck:
     runs-on: ubuntu-latest
