--- a/.github/workflows/app-a.yaml
+++ b/.github/workflows/app-a.yaml
@@ -11,7 +11,6 @@ permissions:
   contents: read # required for actions/checkout
   statuses: write # required for dorny/test-reporter
   checks: write # required for dorny/test-reporter
-  pull-requests: read # required for dorny/paths-filter
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -21,14 +20,15 @@ jobs:
   FilesChanged:
     runs-on: ubuntu-latest
     name: detect what files changed
-    permissions:
-      pull-requests: read
     outputs:
       filesChanged: ${{ steps.changes.outputs.src }}
     steps:
+      - uses: actions/checkout@v3
+
       - uses: dorny/paths-filter@v2
         id: changes
         with:
+          base: ${{ github.ref }}
           filters: |
             src:
               - .github/workflows/app-a.yaml
