--- a/.github/workflows/app-b.yaml
+++ b/.github/workflows/app-b.yaml
@@ -23,6 +23,8 @@ jobs:
     outputs:
       filesChanged: ${{ steps.changes.outputs.src }}
     steps:
+      - uses: actions/checkout@v3
+        
       - uses: dorny/paths-filter@v2
         id: changes
         with:
