--- a/.github/workflows/app-a.yaml
+++ b/.github/workflows/app-a.yaml
@@ -52,8 +52,6 @@ jobs:
 
       - name: Build
         run: dotnet build AppA/MonoRepo.AppA/MonoRepo.AppA.csproj --no-restore --configuration ${{ env.BUILD_CONFIGURATION }}
-  
-  
   Test:
     runs-on: ubuntu-latest
     needs: [ FilesChanged, Build ]
@@ -74,7 +72,6 @@ jobs:
 
       - name: Tests
         run: dotnet test --no-build --configuration ${{ env.BUILD_CONFIGURATION }} AppA/MonoRepo.AppA.Tests/MonoRepo.AppA.Tests.csproj
-  
   AfterBuildTest:
     needs: [Build,Test]
     runs-on: ubuntu-latest
@@ -84,7 +81,6 @@ jobs:
     steps:
       - id: setoutput
         run: echo "success=true" >> "$GITHUB_OUTPUT"
-  
   DummyStep:
     runs-on: ubuntu-latest
     needs: [FilesChanged]
@@ -94,7 +90,6 @@ jobs:
     steps:
       - id: setoutput
         run: echo "success=true" >> "$GITHUB_OUTPUT"
-  
   AppAStatusCheck:
     runs-on: ubuntu-latest
     if: always()
@@ -109,3 +104,10 @@ jobs:
             echo "App A checks failed"
             exit 1
           fi
+  AppADeploy:
+    name: App A Deploy
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master
+    needs: [ Build, Test ]
+    steps:
+      - run: echo "Deploying App A"
