--- a/.github/workflows/app-b.yaml
+++ b/.github/workflows/app-b.yaml
@@ -90,7 +90,7 @@ jobs:
   AppBDeploy:
     name: App B Deploy
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master
+    if: github.ref == 'refs/heads/master'
     needs: [ Build ]
     steps:
       - run: echo "Deploying App A"
