--- a/.github/workflows/app-a.yaml
+++ b/.github/workflows/app-a.yaml
@@ -75,7 +75,7 @@ jobs:
   AfterBuildTest:
     needs: [Build,Test]
     runs-on: ubuntu-latest
-    if: success()
+    if: success() && github.ref != 'refs/heads/master'
     outputs:
       success: ${{ steps.setoutput.outputs.SUCCESS }}
     steps:
@@ -84,15 +84,16 @@ jobs:
   DummyStep:
     runs-on: ubuntu-latest
     needs: [FilesChanged]
-    if: needs.FilesChanged.outputs.filesChanged == 'false'
+    if: needs.FilesChanged.outputs.filesChanged == 'false' && github.ref != 'refs/heads/master'
     outputs:
       success: ${{ steps.setoutput.outputs.success }}
     steps:
       - id: setoutput
         run: echo "success=true" >> "$GITHUB_OUTPUT"
+  
   AppAStatusCheck:
     runs-on: ubuntu-latest
-    if: always()
+    if: always() && github.ref != 'refs/heads/master'
     needs: [Test, AfterBuildTest, DummyStep]
     steps:
       - run: |
