--- a/.github/workflows/app-b.yaml
+++ b/.github/workflows/app-b.yaml
@@ -56,7 +56,7 @@ jobs:
   AfterBuild:
     needs: [Build]
     runs-on: ubuntu-latest
-    if: success()
+    if: success() && github.ref != 'refs/heads/master'
     outputs:
       success: ${{ steps.setoutput.outputs.SUCCESS }}
     steps:
@@ -66,7 +66,7 @@ jobs:
   DummyStep:
     runs-on: ubuntu-latest
     needs: [FilesChanged]
-    if: needs.FilesChanged.outputs.filesChanged == 'false'
+    if: needs.FilesChanged.outputs.filesChanged == 'false' && github.ref != 'refs/heads/master'
     outputs:
       success: ${{ steps.setoutput.outputs.success }}
     steps:
@@ -75,7 +75,7 @@ jobs:
   
   AppBStatusCheck:
     runs-on: ubuntu-latest
-    if: always()
+    if: always() && github.ref != 'refs/heads/master'
     needs: [AfterBuild, DummyStep]
     steps:
       - run: |
@@ -93,4 +93,4 @@ jobs:
     if: github.ref == 'refs/heads/master'
     needs: [ Build ]
     steps:
-      - run: echo "Deploying App A"
+      - run: echo "Deploying App B"
