Add deploy to app-b.yaml

--- a/.github/workflows/app-b.yaml
+++ b/.github/workflows/app-b.yaml
@@ -89,6 +89,7 @@ jobs:
           fi
   AppBDeploy:
     name: App B Deploy
+    environment: Deploy
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/master'
     needs: [ Build ]
