--- a/.github/workflows/app-a.yaml
+++ b/.github/workflows/app-a.yaml
@@ -2,6 +2,11 @@ name: App A
 on:
   push:
   workflow_dispatch:
+    inputs:
+      allowDeploy:
+        description: 'Allow deployments if running from a branch other than master'
+        default: false
+        type: boolean
 
 env:
   BUILD_CONFIGURATION: 'Release'
@@ -38,7 +43,7 @@ jobs:
   Build:
     runs-on: ubuntu-latest
     needs: [FilesChanged]
-    if: needs.FilesChanged.outputs.filesChanged == 'true'
+    if: needs.FilesChanged.outputs.filesChanged == 'true' || github.event_name == 'workflow_dispatch' || inputs.allowDeploy 
     steps:
       - uses: actions/checkout@v3
 
