--- a/.github/workflows/app-a.yaml
+++ b/.github/workflows/app-a.yaml
@@ -57,10 +57,13 @@ jobs:
 
       - name: Build
         run: dotnet build AppA/MonoRepo.AppA/MonoRepo.AppA.csproj --no-restore --configuration ${{ env.BUILD_CONFIGURATION }}
+  
   Test:
     runs-on: ubuntu-latest
     needs: [ FilesChanged, Build ]
-    if: needs.FilesChanged.outputs.filesChanged == 'true'
+    if: needs.FilesChanged.outputs.filesChanged == 'true' 
+    outputs:
+      success: ${{ steps.setoutput.outputs.SUCCESS }}
     steps:
       - uses: actions/checkout@v3
 
@@ -77,32 +80,37 @@ jobs:
 
       - name: Tests
         run: dotnet test --no-build --configuration ${{ env.BUILD_CONFIGURATION }} AppA/MonoRepo.AppA.Tests/MonoRepo.AppA.Tests.csproj
-  AfterBuildTest:
-    needs: [Build,Test]
-    runs-on: ubuntu-latest
-    if: success() && github.ref != 'refs/heads/master'
-    outputs:
-      success: ${{ steps.setoutput.outputs.SUCCESS }}
-    steps:
-      - id: setoutput
-        run: echo "success=true" >> "$GITHUB_OUTPUT"
-  DummyStep:
-    runs-on: ubuntu-latest
-    needs: [FilesChanged]
-    if: needs.FilesChanged.outputs.filesChanged == 'false' && github.ref != 'refs/heads/master'
-    outputs:
-      success: ${{ steps.setoutput.outputs.success }}
-    steps:
+      
       - id: setoutput
         run: echo "success=true" >> "$GITHUB_OUTPUT"
   
+#  AfterBuildTest:
+#    needs: [Build,Test]
+#    runs-on: ubuntu-latest
+#    if: success() && github.ref != 'refs/heads/master'
+#    outputs:
+#      success: ${{ steps.setoutput.outputs.SUCCESS }}
+#    steps:
+#      - id: setoutput
+#        run: echo "success=true" >> "$GITHUB_OUTPUT"
+        
+#  DummyStep:
+#    runs-on: ubuntu-latest
+#    needs: [FilesChanged]
+#    if: needs.FilesChanged.outputs.filesChanged == 'false' && github.ref != 'refs/heads/master'
+#    outputs:
+#      success: ${{ steps.setoutput.outputs.success }}
+#    steps:
+#      - id: setoutput
+#        run: echo "success=true" >> "$GITHUB_OUTPUT"
+  
   AppAStatusCheck:
     runs-on: ubuntu-latest
-    if: always() && github.ref != 'refs/heads/master'
+    if: always() && github.ref != 'refs/heads/master' || inputs.allowDeploy
     needs: [Test, AfterBuildTest, DummyStep]
     steps:
       - run: |
-          passed="${{ needs.AfterBuildTest.outputs.success || needs.DummyStep.outputs.success }}"
+          passed="${{ needs.FilesChanged.outputs.filesChanged == 'false' || needs.Test.outputs.success }}"
           if [[ $passed == "true" ]]; then
             echo "App A checks passed"
             exit 0
@@ -110,6 +118,7 @@ jobs:
             echo "App A checks failed"
             exit 1
           fi
+  
   AppADeploy:
     name: App A Deploy
     environment: Deploy
