--- a/.github/workflows/app-b.yaml
+++ b/.github/workflows/app-b.yaml
@@ -57,26 +57,29 @@ jobs:
 
       - name: Build
         run: dotnet build AppB/MonoRepo.AppB/MonoRepo.AppB.csproj --no-restore --configuration ${{ env.BUILD_CONFIGURATION }}
-  
-  AfterBuild:
-    needs: [Build]
-    runs-on: ubuntu-latest
-    if: success() && github.ref != 'refs/heads/master' && !inputs.allowDeploy
-    outputs:
-      success: ${{ steps.setoutput.outputs.SUCCESS }}
-    steps:
+
       - id: setoutput
         run: echo "success=true" >> "$GITHUB_OUTPUT"
   
-  DummyStep:
-    runs-on: ubuntu-latest
-    needs: [FilesChanged]
-    if: needs.FilesChanged.outputs.filesChanged == 'false' && github.ref != 'refs/heads/master'
-    outputs:
-      success: ${{ steps.setoutput.outputs.success }}
-    steps:
-      - id: setoutput
-        run: echo "success=true" >> "$GITHUB_OUTPUT"
+#  AfterBuild:
+#    needs: [Build]
+#    runs-on: ubuntu-latest
+#    if: success() && github.ref != 'refs/heads/master' && !inputs.allowDeploy
+#    outputs:
+#      success: ${{ steps.setoutput.outputs.SUCCESS }}
+#    steps:
+#      - id: setoutput
+#        run: echo "success=true" >> "$GITHUB_OUTPUT"
+#  
+#  DummyStep:
+#    runs-on: ubuntu-latest
+#    needs: [FilesChanged]
+#    if: needs.FilesChanged.outputs.filesChanged == 'false' && github.ref != 'refs/heads/master'
+#    outputs:
+#      success: ${{ steps.setoutput.outputs.success }}
+#    steps:
+#      - id: setoutput
+#        run: echo "success=true" >> "$GITHUB_OUTPUT"
   
   AppBStatusCheck:
     runs-on: ubuntu-latest
@@ -84,7 +87,7 @@ jobs:
     needs: [AfterBuild, DummyStep]
     steps:
       - run: |
-          passed="${{ needs.AfterBuild.outputs.success || needs.DummyStep.outputs.success }}"
+          passed="${{ needs.FilesChanged.outputs.filesChanged == 'false' || needs.Build.outputs.success }}"
           if [[ $passed == "true" ]]; then
             echo "App B passed"
             exit 0
@@ -92,6 +95,7 @@ jobs:
             echo "App B failed"
             exit 1
           fi
+  
   AppBDeploy:
     name: App B Deploy
     environment: Deploy
