--- a/.github/workflows/app-b.yaml
+++ b/.github/workflows/app-b.yaml
@@ -84,6 +84,7 @@ jobs:
   AppBStatusCheck:
     runs-on: ubuntu-latest
     if: always() && github.ref != 'refs/heads/master' && !inputs.allowDeploy
+    needs: [Build]
     steps:
       - run: |
           passed="${{ needs.FilesChanged.outputs.filesChanged == 'false' || needs.Build.outputs.success }}"
