Try checkout output for empty string

--- a/.github/workflows/app-a.yaml
+++ b/.github/workflows/app-a.yaml
@@ -110,7 +110,7 @@ jobs:
     needs: [Test]
     steps:
       - run: |
-          passed="${{ needs.FilesChanged.outputs.filesChanged == 'false' || needs.Test.outputs.success }}"
+          passed="${{ needs.FilesChanged.outputs.filesChanged == 'false' || (needs.Test.outputs.success != '' && needs.Test.outputs.success) }}"
           if [[ $passed == "true" ]]; then
             echo "App A checks passed"
             exit 0
