--- a/.github/workflows/app-b.yaml
+++ b/.github/workflows/app-b.yaml
@@ -89,7 +89,7 @@ jobs:
     needs: [Build]
     steps:
       - run: |
-          passed="${{ needs.FilesChanged.outputs.filesChanged == 'false' || needs.Build.outputs.success }}"
+          passed="${{ needs.FilesChanged.outputs.filesChanged == 'false' || (needs.Build.outputs.success != '' && needs.Build.outputs.success) }}"
           if [[ $passed == "true" ]]; then
             echo "App B passed"
             exit 0
