--- a/.github/workflows/app-a.yaml
+++ b/.github/workflows/app-a.yaml
@@ -109,6 +109,7 @@ jobs:
     if: always() && github.ref != 'refs/heads/master' || inputs.allowDeploy
     needs: [Test]
     steps:
+      - run: echo "${{ needs.Build.outputs.success }}
       - run: |
           passed="${{ needs.FilesChanged.outputs.filesChanged == 'false' || (needs.Test.outputs.success != '' && needs.Test.outputs.success) }}"
           if [[ $passed == "true" ]]; then
