--- a/.github/workflows/app-b.yaml
+++ b/.github/workflows/app-b.yaml
@@ -92,6 +92,8 @@ jobs:
           echo "${{ needs.Build.outputs.success }}"
           echo "${{ needs.Build.outputs.success != '' }}"
           echo "${{ (needs.Build.outputs.success != '' && needs.Build.outputs.success)}}"
+          echo "${{ needs.Build.outputs.success == '' }}"
+          echo "${{ (needs.Build.outputs.success == '' && !needs.Build.outputs.success)}}"
       - run: |
           passed="${{ needs.FilesChanged.outputs.filesChanged == 'false' || (needs.Build.outputs.success != '' && needs.Build.outputs.success) }}"
           if [[ $passed == "true" ]]; then
