--- a/.github/workflows/app-b.yaml
+++ b/.github/workflows/app-b.yaml
@@ -95,7 +95,7 @@ jobs:
           echo "${{ needs.Build.outputs.success == '' }}"
           echo "${{ (needs.Build.outputs.success == '' && !needs.Build.outputs.success)}}"
       - run: |
-          passed="${{ needs.FilesChanged.outputs.filesChanged == 'false' || (needs.Build.outputs.success != '' && needs.Build.outputs.success) }}"
+          passed="${{ needs.FilesChanged.outputs.filesChanged == 'false' || (needs.Build.outputs.success == '' && !needs.Build.outputs.success) }}"
           if [[ $passed == "true" ]]; then
             echo "App B passed"
             exit 0
