--- a/.github/workflows/app-a.yaml
+++ b/.github/workflows/app-a.yaml
@@ -116,7 +116,7 @@ jobs:
           echo "${{ needs.Build.outputs.success == '' }}"
           echo "${{ (needs.Build.outputs.success == '' && !needs.Build.outputs.success)}}"
       - run: |
-          passed="${{ needs.FilesChanged.outputs.filesChanged == 'false' || (needs.Test.outputs.success == '' && !needs.Test.outputs.success) }}"
+          passed="${{ needs.FilesChanged.outputs.filesChanged == 'false' || (needs.Test.outputs.success == '' && !needs.Test.outputs.success) || needs.Test.outputs.success }}"
           if [[ $passed == "true" ]]; then
             echo "App A checks passed"
             exit 0
